<resources>
    <string name="app_name">Infotani</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="login_petani">Login Petani</string>
    <string name="reset_password">Reset Password</string>
    <string name="logo_petani">Logo Petani</string>
    <string name="pertanyaan">pertanyaan</string>
    <string name="imgbtndaftar">imgBtndaftar</string>
    <string name="btnmasuk">Masuk</string>
    <string name="btnkeluar">Keluar</string>
    <string name="logo">logo</string>
    <string name="logo_text">logo text</string>
    <string name="foto">Foto</string>
    <string name="pilih_foto">Pilih...</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="tanggal_panen">Tanggal Panen</string>

    <string-array name="tahun">
        <item>Pilih Tahun</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
    </string-array>
</resources>
