<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/registerpetani"
        android:contentDescription="@string/login_petani"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/registrasipetani"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/formlogin"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="vertical"
            android:background="@drawable/bgform1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="130dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">
                    <EditText
                        android:id="@+id/regUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/bgtext"
                        android:gravity="center"
                        android:hint="@string/nama_pengguna"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:passwordToggleEnabled="true">
                    <EditText
                        android:id="@+id/regPassword"
                        android:hint="@string/kata_sandi"
                        android:inputType="textPassword"
                        android:gravity="center|center_vertical"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bgtext"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:passwordToggleEnabled="true">
                    <EditText
                        android:id="@+id/regKonfpassword"
                        android:hint="@string/konfirmasi_kata_sandi"
                        android:inputType="textPassword"
                        android:gravity="center|center_vertical"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bgtext"/>
                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/foto"
                        android:textStyle="bold"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginEnd="15dp"/>
                    <Button
                        android:id="@+id/btnUpload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pilih_foto"
                        android:textSize="12sp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"/>
                </LinearLayout>
                <ImageView
                    android:id="@+id/imageUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginEnd="15dp"/>
                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:visibility="gone"/>
                <LinearLayout
                    android:id="@+id/linearLayoutBtnRegister"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <ImageButton
                        android:id="@+id/imgBtnsimpan"
                        android:layout_margin="5dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:contentDescription="@string/btnmasuk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bgmasuk"
                        android:src="@drawable/simpan"/>
                    <ImageButton
                        android:id="@+id/imgBtnkembali"
                        android:layout_margin="5dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:contentDescription="@string/btnkeluar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bgkeluar"
                        android:src="@drawable/kembali"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp">
                <ImageView
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:contentDescription="@string/logo"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo"/>
                <ImageView
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/logo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/infotani"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>