<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/resetpassword"
        android:layout_width="281dp"
        android:layout_height="87dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/login_petani"
        android:src="@drawable/resetpassword" />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/formlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="vertical"
            android:background="@drawable/bgform1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:orientation="vertical">

                <EditText

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/bgtext"
                    android:gravity="center"
                    android:inputType="text" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/bgtext"
                    android:gravity="center"
                    android:inputType="textPassword" />

                <LinearLayout
                    android:id="@+id/pt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"></LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/imgBtnMasuk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/bgmasuk"
                        android:clickable="true"
                        android:contentDescription="@string/btnmasuk"
                        android:focusable="true"
                        android:src="@drawable/masuk" />

                    <ImageButton
                        android:id="@+id/imgBtnsimpan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/bgkeluar"
                        android:clickable="true"
                        android:contentDescription="@string/btnkeluar"
                        android:focusable="true"
                        android:src="@drawable/simpan" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp">
                <ImageView
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:contentDescription="@string/logo"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo"/>
                <ImageView
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/logo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/infotani"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>