<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundhijau"
    android:orientation="vertical"
    tools:context=".FormTanyaActivity"
    android:id="@+id/linearLayoutBtnTanya">

    <ImageView
        android:id="@+id/loginpetani"
        android:contentDescription="@string/login_petani"
        android:layout_gravity="center"
        android:layout_width="263dp"
        android:layout_height="29dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/formpertanyaan"/>
    <ProgressBar
        android:id="@+id/loadingTanya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:visibility="gone"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/formpesan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/bagianpertanyaan">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">
                    <EditText
                        android:id="@+id/namatanya"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/bgtext"
                        android:gravity="center"
                        android:layout_gravity=""
                        android:hint="Nama" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">
                    <EditText
                        android:id="@+id/emailtanya"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/bgtext"
                        android:gravity="center"
                        android:layout_gravity=""
                        android:hint="email" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">
                    <EditText
                        android:id="@+id/pesantanya"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/bgtext"
                        android:gravity="center"
                        android:layout_gravity=""
                        android:hint="Pesan" />
                </com.google.android.material.textfield.TextInputLayout>

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:visibility="gone"/>
                <LinearLayout
                    android:id="@+id/linearLayoutBtn"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <ImageButton
                        android:id="@+id/imgBtnsimpanpesan"
                        android:layout_margin="5dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:contentDescription="@string/btnmasuk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bgmasuk"
                        android:src="@drawable/simpan"/>
                    <ImageButton
                        android:id="@+id/imgBtnkeluarpesan"
                        android:layout_margin="5dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:contentDescription="@string/btnkeluar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bgkeluar"
                        android:src="@drawable/keluar"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp">
                <ImageView
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:contentDescription="@string/logo"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo"/>
                <ImageView
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/logo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/infotani"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>